[package]
name = "underworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.36.0"

[lints.clippy]
all = "deny"
pedantic = "deny"

[lints.rust]
unsafe_code = "forbid"
dead_code = "allow"
unreachable_pub = "allow"
unused_variables = "forbid"
unused_imports = "forbid"
unused_import_braces = "forbid"
missing_debug_implementations = "deny"
